WebCore: 2009-07-22  Viet-Trung Luu  <viettrungluu@gmail.com>

Reviewed by David Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=27289
        When a mouse click occurs on a scrollbar without a preceding mouse move
        onto it, the release isn't handled correctly (since
        EventHandler::m_lastScrollbarUnderMouse isn't set on mouse down, but
        only on mouse move). (Side comment: That scrollbar-handling code
        in EventHandler is ugly. It should be fixed properly.)

        Tests: scrollbars/scrollbar-miss-mousemove.html
               scrollbars/scrollbar-miss-mousemove-disabled.html

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleMousePressEvent):
        (WebCore::EventHandler::handleMouseMoveEvent):
        (WebCore::EventHandler::updateLastScrollbarUnderMouse):
        * page/EventHandler.h:

LayoutTests:
2009-07-22  Viet-Trung Luu  <viettrungluu@gmail.com>

        Reviewed by David Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=27289
        Tests that mouse clicks/releases are handled properly on scrollbars
        even when there is no mouse move onto the scrollbar (two cases: enabled
        and disabled controls).

        * scrollbars/scrollbar-miss-mousemove-disabled-expected.txt: Added.
        * scrollbars/scrollbar-miss-mousemove-disabled.html: Added.
        * scrollbars/scrollbar-miss-mousemove-expected.txt: Added.
        * scrollbars/scrollbar-miss-mousemove.html: Added.

Canonical link: https://commits.webkit.org/37886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46273 268f45cc-cd09-0410-ab3c-d52691b4dbfc